[package]
authors = ["Y. D. Santos <yds12@protonmail.com>"]
name = "mexe"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Simple arithmetic expression evaluator"
homepage = "https://github.com/yds12/mexe"
repository = "https://github.com/yds12/mexe"
readme = "README.md"
documentation = "https://docs.rs/mexe/latest/"
keywords = ["arithmetic", "eval", "expression", "parse", "evaluator"]
categories = ["development-tools", "mathematics", "parsing", "parser-implementations"]

[dev-dependencies]
criterion = "0.3"
float-cmp = "0.9"
meval = "0.2"
fasteval = "0.2"

[[bench]]
name = "benchmarks"
harness = false
